# genericsuite-asdt-be

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
examples/: instructions.md
genericsuite_asdt/: api.py  crew.py  llm.py  main.py
genericsuite_asdt/camelai/: README.md  pyproject.toml
genericsuite_asdt/camelai/genericsuite_asdt/: generic_agents.py  llm.py  main.py
genericsuite_asdt/config/: agents.yaml  tasks.yaml
genericsuite_asdt/crewai/: README.md  pyproject.toml
genericsuite_asdt/crewai/config/: tasks_ideation.yaml  tasks_research.yaml
genericsuite_asdt/crewai/genericsuite_asdt/: api.py  crew.py  generic_agents.py  llm.py  main.py  tools  utils
genericsuite_asdt/genericsuite/config/: config.py
genericsuite_asdt/genericsuite/util/: app_context.py  app_logger.py  jwt.py
genericsuite_asdt/genericsuite_ai/config/: config.py
genericsuite_asdt/static/: index.html
genericsuite_asdt/tools/: custom_tool.py
genericsuite_asdt/utils/: app_logger.py  datetime.py  generic_agents.py  monitoring.py  utilities.py
scripts/: run_agents.sh  run_camelai_agents.sh  run_crewai_agents.sh  run_openlit.sh
