[project]
name = "genericsuite_asdt_camelai"
version = "0.1.0"
authors = [
    { name="Carlos J. Ramirez", email="tomkat_cr@yahoo.com" }
]
description = "GenericSuite Agentic Software Development Team (ASDT) backend, CamelAI version"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    "License :: OSI Approved :: ISC License",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Operating System :: OS Independent",
    'Topic :: Software Development',
]
dynamic = [
    "license",
]

[project.urls]
Homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-ASDT/"
Issues = "https://github.com/tomkat-cr/genericsuite-asdt-be/issues"

[tool.poetry]
name = "genericsuite_asdt_camelai"
version = "0.1.0"
description = "GenericSuite Agentic Software Development Team (ASDT) backend, CamelAI version"
authors = ["Carlos J. Ramirez <tomkat_cr@yahoo.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/tomkat-cr/genericsuite-asdt-be.git"
homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-ASDT/"
packages = [
    { include = "genericsuite_asdt" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openlit = "^1.33.8"
pyyaml = "^6.0.2"
camel-ai = {extras = ["all"], version = "^0.2.21"}

[tool.poetry.scripts]
genericsuite_asdt_camelai = "genericsuite_asdt.main:run"
run_camelai = "genericsuite_asdt.main:run"
api = "genericsuite_asdt.api:run_api"
train = "genericsuite_asdt.main:train"
replay = "genericsuite_asdt.main:replay"
test = "genericsuite_asdt.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
